1. 라우터 적용 => 메인페이지 사용자 정보 없을 경우 로그인페이지 이동 2. 로그아웃 모달 추가

--- a/quora-clone/src/Navbar.css
+++ b/quora-clone/src/Navbar.css
@@ -169,9 +169,11 @@
 .modal_buttons {
     display: flex;
     align-items: center;
-    margin-top: 260px;
+    /* margin-top: 260px; */
+    margin-top: 200px;
     margin-right: -20px;
-    border-top: 1px solid lightgray;
+    /* border-top: 1px solid lightgray; */
+    margin-right: 0.5%;
 }
 
 .modal_buttons > .can {
